--- a/my_gym/pubspec.yaml
+++ b/my_gym/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   firebase_core: ^2.8.0
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
